--- a/index.html
+++ b/index.html
@@ -1,27 +1,61 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8" />
+        <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Temperature Conversion - HM 3 JS</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.1/moment.min.js"></script>
         <style>
           .container {
             width: 80%;
             margin-top: 10%;
           }
           body {
-            background-color: rgb(255, 255, 255);
+            background-color: rgb(205, 205, 205);
           }
         </style>
     </head>
 
     <body>
+      <div class="container">
+        <form class="text-center border border-light p-5">
+          <p class="h3 mb-4">Temperature Conversion</p>
+          <div class="h4 mb-12">
+            <select name="from" id="from" onchange="select()">
+              <option value="cel">Celcius</option>
+              <option value="fahr">Fahrenheit</option>
+              <option value="rea">Reamur</option>
+              <option value="kel">Kelvin</option>
+            </select>
+            to
+            <select name="to" id="to" onchange="select()">
+              <option value="cel">Celcius</option>
+              <option value="fahr">Fahrenheit</option>
+              <option value="rea">Reamur</option>
+              <option value="kel">Kelvin</option>
+            </select>
+          </div>
+          <input type="number" name="inputvalue" id="nilai_in" class="form-control mb-3" 
+          placeholder="Input the value to convert" onkeypress="validate(event)" onkeyup="calc()"/>
+          <p class="h6 mb-4">=</p>
+          <input type="number" id="nilai_out" class="form-control mb-3" placeholder="Result" disabled/>
+        </form>
+      </div>
+      <div>
+        <h4>Change Background Color</h4>
+        <input class="form-control" id="color"/>
+        <button type="button" class="btn btn-light" onclick="change()">Change</button>
+      </div>
 
     </body>
-
+    <script src="/js/convert.js"></script>
+    <script src="/js/main.js"></script>
+    <script>
+      function change() {
+        document.body.style.backgroundColor =
+        document.querySelector("color").value;
+      }
+    </script>
 </html>
     
