--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         <form class="text-center p-5">
           <h5 class="mb-2">Change Background Color</h5>
           <label for="backgroundchange" class="form-label">RGB Colors and else</label>
-          <input class="form-control mb-3" id="color" control-id="ControlID-5">
+          <input class="form-control mb-3" id="color">
           <button type="button" class="btn btn-light" onclick="change()">Change</button>
         </form>
       </div>
     </body>
-    <script src="/convert.js"></script>
-    <script src="/main.js"></script>
+    <script src="./convert.js"></script>
+    <script src="./main.js"></script>
     <!--background change-->
     <script>
       function change() {
